<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="app_name">BaseLib</string>
  <string name="app_app_name">Palm Secret</string>
  <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
  <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
  <string name="setting_feedback_toast">Please input advice first</string>
  <string name="setting_feedback_success">Have received your feedback and we will improve as soon as possible</string>
  <string name="home_palm_title">Palm</string>
  <string name="home_cnt_title">Horoscope</string>
  <string name="home_tarot_title">Tarot</string>
  <string name="home_face_title">Face</string>
  <string name="home_psy_title">Psychological</string>
  <string name="palm_daily_title">Daily Palm</string>
  <string name="palm_daily_des">Once a day, better understand yourself</string>
  <string name="palm_quiz_title">Palmprint Judgment</string>
  <string name="palm_quiz_des">Choose Q&amp;amp;A to find out your palm print information</string>
  <string name="palm_match_title">Palm match</string>
  <string name="palm_match_des">Scan your hand to see if you are a natural pair</string>
  <string name="palm_shape_title">Palm Shape Judgment</string>
  <string name="palm_shape_des">What is your palm shape?</string>
  <string name="cnt_daily_title">Daily Horoscope</string>
  <string name="cnt_daily_des">How is your Horoscope cloud today?</string>
  <string name="cnt_match_title">Horoscope Roman</string>
  <string name="cnt_match_des">Find the best horoscope for you</string>
  <string name="cnt_mayan_title">Mayan Horoscope</string>
  <string name="cnt_mayan_des">Which ancient and mysterious Mayan Horoscope you belong to</string>
  <string name="cnt_druid_title">Druid Horoscope</string>
  <string name="cnt_druid_des">Learn about the ancient Druid Horoscope</string>
  <string name="tarot_daily_title">Daily Tarot</string>
  <string name="tarot_daily_des">Open the tarot card and learn about your today</string>
  <string name="tarot_love_title">Find True Love</string>
  <string name="tarot_love_des">Have I met my true love? Tarot guides you to your soul mate.</string>
  <string name="tarot_career_title">Career</string>
  <string name="tarot_career_des">You would see everything about your career through tarot card.</string>
  <string name="tarot_health_title">Health</string>
  <string name="tarot_health_des">Good health is one of life\'s greatest blessing. Tarot can help you know your health condition and give you advice to improve it.</string>
  <string name="face_daily_title">Aging Face</string>
  <string name="face_daily_des">Take time machine, see you in the future</string>
  <string name="face_mole_title" translatable="false">Mole</string>
  <string name="face_mole_des">Every mole has a special meaning</string>
  <string name="face_btn_50s">50</string>
  <string name="face_btn_70s">70</string>
  <string name="face_btn_90s">90</string>
  <string name="palm_scan_tip">Please make sure the palm is inside the border</string>
  <string name="palm_life_line">Life Line</string>
  <string name="palm_wisdom_line">Wisdom Line</string>
  <string name="palm_love_line">Love Line</string>
  <string name="palm_judegment_title">Choose a test</string>
  <string name="palm_judegment_des">Resolve hidden information about yourself by answering questions about palm prints</string>
  <string name="palm_scan_error">Failed to detect the palm, please try again</string>
  <string name="palm_match_best">%1$s best match constellation</string>
  <string name="today">Today</string>
  <string name="tomorrow">Tomorrow</string>
  <string name="future">Future</string>
  <string name="cnt_daily_today">Today\'s Fortunate</string>
  <string name="cnt_daily_tomorrow">Tomorrow\'s Fortunate</string>
  <string name="more">More</string>
  <string name="cnt_daily_week">Fortunate this week</string>
  <string name="cnt_daily_month">Fortunate this month</string>
  <string name="cnt_daily_year">Fortunate this year</string>
  <string name="tarot_daily">Choose today\'s Tarot</string>
  <string name="tarot_love">Today\'s Love</string>
  <string name="tarot_fortune">Today\'s Fortune</string>
  <string name="tarot_business">Today\'s Business</string>
  <string name="face_daily_tip">Please place your face in the designated area</string>
  <string name="face_daily_select_photo">Select Photo</string>
  <string name="face_daily_error">Failed to detect face, please try again</string>
  <string name="psy_previous">Previous</string>
  <string name="psy_confirm_quit">Are you sure to quit? If you quit the test, all current progress will be lost.</string>
  <string name="psy_result">Result</string>
  <string name="today_daily_quotes">Daily Quotes</string>
  <string name="today_daily_color">Daily Lucky Color</string>
  <string name="today_daily_wear">Today you should wear %1$s</string>
  <string name="today_daily_number">Daily Lucky Number</string>
  <string name="today_daily_tarot">Daily Tarot</string>
  <string name="me_flag_title">WHO ARE YOU</string>
  <string name="me_flag_des">Always Remember That You Are Absolutely Unique</string>
  <string name="me_flag_no_more_flag">Do more test questions and show you more comprehensive</string>
  <string name="info_name">Name</string>
  <string name="info_birthday">Birthday</string>
  <string name="info_horoscope">Horoscope</string>
  <string name="info_gender">Gender</string>
  <string name="info_male">Male</string>
  <string name="info_female">Female</string>
  <string name="info_title">Personal Information</string>
  <string name="info_des">I want to know how to call you because it helps to generate a unique constellation report for you.</string>
  <string name="done">Done</string>
  <string name="yes">YES</string>
  <string name="no">NO</string>
  <string name="info_next">Next</string>
  <string name="net_error">Please check the network condition :(</string>
  <string name="net_try_again">Try again</string>
  <string name="net_server_error">No data coming back, try something else</string>
  <string name="setting_title">Setting</string>
  <string name="setting_privacy">Privacy Policy</string>
  <string name="setting_term">Terms of Service</string>
  <string name="setting_feedback">Feedback</string>
  <string name="setting_feedback_hint">Please write down your suggestions to us</string>
  <string name="tarot_fool">The Fool</string>
  <string name="tarot_magician">The Magician</string>
  <string name="tarot_wheel">Wheel of Fortune</string>
  <string name="tarot_priestess">The High Priestess</string>
  <string name="tarot_empress">The Empress</string>
  <string name="tarot_wands">Ace of Wands</string>
  <string name="tarot_emperor">The Emperor</string>
  <string name="tarot_justice">Justice</string>
  <string name="tarot_hierophant">The Hierophant</string>
  <string name="tarot_hanged_man">The Hanged Man</string>
  <string name="tarot_lovers">The Lovers</string>
  <string name="tarot_chariot">The Chariot</string>
  <string name="tarot_strength">Strength</string>
  <string name="tarot_hermit">The Hermit</string>
  <string name="tarot_temperance">Temperance</string>
  <string name="tarot_death">Death</string>
  <string name="tarot_tower">The Tower</string>
  <string name="tarot_devil">The Devil</string>
  <string name="tarot_star">The Star</string>
  <string name="tarot_moon">The Moon</string>
  <string name="tarot_judgement">Judgement</string>
  <string name="tarot_sun">The Sun</string>
  <string name="tarot_world">The World</string>
  <string name="cnt_capricorn">Capricorn</string>
  <string name="cnt_aquarius">Aquarius</string>
  <string name="cnt_pisces">Pisces</string>
  <string name="cnt_aries">Aries</string>
  <string name="cnt_taurus">Taurus</string>
  <string name="cnt_gemini">Gemini</string>
  <string name="cnt_cancer">Cancer</string>
  <string name="cnt_leo">Leo</string>
  <string name="cnt_virgo">Virgo</string>
  <string name="cnt_libra">Libra</string>
  <string name="cnt_scorpio">Scorpio</string>
  <string name="cnt_sagittarius">Sagittarius</string>
  <string name="palm_scan_result">Your love fortune has beaten %1$s%% of users</string>
  <string name="recommend">Recommend</string>
  <string name="constellation_selection">Constellation selection</string>
  <string name="love">Love</string>
  <string name="heath">Health</string>
  <string name="wealth">Wealth</string>
  <string name="career">Career</string>
  <string name="words_for_you">Words for you</string>
  <string name="tab_home">Home</string>
  <string name="tab_today">Today</string>
  <string name="tab_me">Me</string>
  <string name="go_premium">Get My Result</string>
  <string name="failed_to_subscribe">Failed to subscribe</string>
  <string name="pay_default_one_title">Discovery your fate for Free</string>
  <string name="pay_default_one_btn1_title">Yearly: $96.99</string>
  <string name="pay_default_one_btn2_des">$25.99/month</string>
  <string name="pay_default_one_main_text">Personal palm reading&lt;divider/&gt;Daily horoscope &amp; compatibility&lt;divider/&gt;Aging Face&lt;divider/&gt;Life prediction &amp; advice&lt;divider/&gt;100% No Ads</string>
  <string name="pay_default_one_btn2_title">Monthly: $25.99</string>
  <string name="palm_scan_result_love">Your love fortune has beaten %1$s%% of users</string>
  <string name="palm_scan_result_life">Your life fortune beats %1$s%% users</string>
  <string name="palm_scan_result_wealth">Your wealth fortune beats %1$s%% users</string>
  <string name="success_to_subscribe">Subscription successful</string>
  <string name="palm_palmmatch_title1">YOU</string>
  <string name="palm_palmmatch_message1">Please put your left hand in the area</string>
  <string name="palm_palmmatch_title2">YOU LOVER</string>
  <string name="palm_palmmatch_message2">Please put your lover\'s right hand in the area.</string>
  <string name="palm_palmmatch_title">Hand matching</string>
  <string name="palm_palmmatch_fitness">Your fitness with your partner</string>
  <string name="palm_palmmatch_intimacy">Intimacy</string>
  <string name="palm_palmmatch_suitable">Suitable</string>
  <string name="palm_palmmatch_age">Best marriage age</string>
  <string name="palm_palmmatch_baby">%1$s children</string>
  <string name="palm_palmmatch_explanation">Full explanation</string>
  <string name="permission_need_upload">Need Permission</string>
  <string name="permission_message">In order to analyze and get results, every photo you take or select is uploaded to the cloud for processing and analysis, and the photo will be deleted as soon as processing is complete.</string>
  <string name="palm_palmmatch_children">Future children</string>
  <string name="palm_palmmatch_loading">Report generatingü</string>
  <string name="home_palmmatch_title">Hand matching</string>
  <string name="home_palmmatch_message">Do you have a romantic relationship with him?</string>
  <string name="pay_watch_ads_title">Watch Ads</string>
  <string name="pay_watch_ads_sub_title">get 1 time access</string>
  <string name="guide_title">LIKE PALM SECRET？</string>
  <string name="guide_content">With your support, Palm Secret will get better</string>
  <string name="guide_feedback">Feedback</string>
  <string name="guide_like">Like It</string>
  <string name="permission_guide_camera_title">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
  <string name="permission_guide_camera_content">Camera Permissions</string>
  <string name="dialog_heartrate_title">Try Heart Rate Test！</string>
  <string name="dialog_heartrate_content">Heart rate test to test your physical health and soulmate\'s birthday</string>
  <string name="dialog_heartrate_sure">TRY IT！</string>
</resources>