<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.github.mmin18.widget.RealtimeBlurView
            android:id="@+id/bv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:realtimeBlurRadius="15dp"
            app:realtimeOverlayColor="#00000000" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <Button
                android:id="@+id/btn_pay"
                android:layout_width="@dimen/change_642px"
                android:layout_height="@dimen/change_150px"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/change_24px"
                android:background="@drawable/bg_round_gradient_theme"
                android:fontFamily="sans-serif-black"
                android:text="@string/go_premium"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        <LinearLayout
                android:id="@+id/btn_pay_watch"
                android:layout_width="@dimen/change_642px"
                android:layout_height="@dimen/change_150px"
                android:background="@drawable/bg_round_translucent_theme"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/pay_watch_ads_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/change_45px" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_watch_ads_sub_title"
                    android:textColor="#80c8e8ff"
                    android:textSize="@dimen/change_30px" />
        </LinearLayout>
    </LinearLayout>

</merge>