<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:text="@string/guide_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal"
            android:text="@string/guide_content"
            android:textColor="#cfebff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
            android:id="@+id/iv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/yes" />

    <ImageView
            android:id="@+id/iv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/no" />

    <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center_horizontal"
            android:text="@string/guide_feedback"
            android:textColor="#5b5b5b"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_no"
            app:layout_constraintEnd_toEndOf="@+id/iv_no"
            app:layout_constraintStart_toStartOf="@+id/iv_no"
            app:layout_constraintTop_toTopOf="@+id/iv_no"
            app:layout_constraintVertical_bias="0.648" />

    <TextView
            android:id="@+id/tv_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center_horizontal"
            android:text="@string/guide_like"
            android:textColor="#5b5b5b"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_yes"
            app:layout_constraintEnd_toEndOf="@+id/iv_yes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_yes"
            app:layout_constraintTop_toTopOf="@+id/tv_feedback"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/tv_no"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_round_green"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#40cb9b"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_no"
            app:layout_constraintEnd_toEndOf="@+id/iv_no"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/iv_no"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/tv_yes"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_round_gradient_theme"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_yes"
            app:layout_constraintEnd_toEndOf="@+id/iv_yes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/iv_yes"
            app:layout_constraintTop_toTopOf="@+id/tv_no"
            app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>