<?xml version="1.0" encoding="utf-8"?>
<com.palmapp.master.baselib.view.RoundLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="@dimen/change_840px"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_common_dialog"
        android:orientation="vertical"
        android:paddingLeft="@dimen/change_48px"
        android:paddingTop="@dimen/change_48px"
        android:paddingRight="@dimen/change_48px">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_gravity="right"
            android:src="@mipmap/home_dialog_heart_ic_cancel"
            android:layout_width="@dimen/change_42px"
            android:layout_height="@dimen/change_42px"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/change_54px"
            android:textColor="#244e75"
            android:text="@string/dialog_heartrate_title"/>

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/change_42px"
            android:src="@mipmap/home_dialog_heart_pic_banner"
            android:layout_width="@dimen/change_744px"
            android:layout_height="@dimen/change_360px"/>

        <TextView
            android:layout_marginTop="@dimen/change_30px"
            android:layout_gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/change_12px"
            android:layout_marginLeft="@dimen/change_60px"
            android:layout_marginRight="@dimen/change_60px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/change_36px"
            android:textColor="#254e75"
            android:text="@string/dialog_heartrate_content"/>

        <TextView
            android:id="@+id/tv_try"
            android:layout_marginTop="@dimen/change_60px"
            android:layout_marginBottom="@dimen/change_60px"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/bg_round_gradient_theme"
            android:text="@string/dialog_heartrate_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/change_54px"
            android:textStyle="bold"
            android:layout_width="@dimen/change_540px"
            android:layout_height="@dimen/change_138px"/>

    </LinearLayout>


</com.palmapp.master.baselib.view.RoundLayout>